# tlcpack-micro-ci

./: .gitignore  .gitmodules  Jenkinsfile  Makefile  README.md  pyproject.toml
config/: Dockerfile  nodes.json
config/jenkins-jobs/: jenkins_jobs.ini  microtvm.yaml  tvm.yaml
proto/microtvm_ci/device/: microDevice.proto
proto/python/device/: microDevice.proto
python/ci/: build_container.py  run_jenkins.py  utils.py
python/device/: device_client.py  device_server.py  device_utils.py  microDevice_pb2.py  microDevice_pb2_grpc.py
python/microtvm_ci/: README.md  configure_jenkins.py  jenkins_lib.py  microDevice_pb2.py  microDevice_pb2_grpc.py  pyproject.toml  utils.py
python/microtvm_ci/ci/: configure_jenkins.py
python/microtvm_ci/device/: README.md  device_client.py  device_server.py  device_table.json  device_utils.py  microDevice_pb2.py  microDevice_pb2_grpc.py
python/microtvm_ci/microtvm_device/: device_client.py  device_server.py  microDevice_pb2.py  microDevice_pb2_grpc.py
python/microtvm_ci/tests/: test_micro_device.py
scripts/: device_attach.sh  device_detach.sh  device_query.sh  device_release.sh  rvm_login.sh  util.sh
scripts/ci/: 0_init.sh  1_build_container.sh  2_configure_jenkins.sh  3_setup_service.sh  ci_util.sh  microtvm_jenkins_init.sh  microtvm_server_init.sh
tests/scripts/: task_python_test_zephyr.sh  task_python_test_zephyr_aot.sh  test_util.sh
