[tool.poetry]
name = "microtvm_ci"
version = "0.1.0"
description = ""
authors = ["mehrdadh <mehrdad.hessar@gmail.com>"]
keywords = ["microTVM", "tvm"]
repository = "https://github.com/mehrdadh/tlcpack-micro-ci"
license = "Apache"
packages = [
   { include="microtvm_ci", from="python" },
]

[tool.poetry.dependencies]
python = "^3.6.9"
PyYAML = "^5.4.1"
requests = "^2.25.1"
jenkins-job-builder = {git = "https://github.com/areusch/jenkins-job-builder", rev = "master"}
grpcio = "^1.39.0"
grpcio-tools = "^1.39.0"
tabulate = "^0.8.9"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
